--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,42 @@ body {
     letter-spacing: 17.4px;
     animation: moveInRight 1s ease-out; }
 
+.heading-secondary {
+  font-size: 35px;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: 2px;
+  transition: all 0.2s; }
+  .heading-secondary:hover {
+    transform: skewY(2deg) skewX(15deg) scale(1.1);
+    text-shadow: 5px 10px 20px rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 16px; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 30px; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 80px; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 40px; }
+
+.u-margin-bottom-small {
+  margin-bottom: 15px; }
+
 .btn {
   /* when click the button */ }
   .btn:link, .btn:visited {
@@ -103,13 +139,32 @@ body {
     animation: moveInBottom 0.5s ease-out 0.75s;
     animation-fill-mode: backwards; }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 16px;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all 0.2s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%); }
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
   .header___logo-box {
     position: absolute;
     top: 40px;
@@ -122,3 +177,34 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.row {
+  max-width: 1140px;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 80px; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 60px; }
+  .row .col-1-of-2 {
+    width: calc((100% - 60px) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 60px) / 3); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 60px) / 4); }
+  .row .col-2-of-3 {
+    width: calc( 2 * ((100% - 2 * 60px) / 3) + 60px); }
+  .row .col-2-of-4 {
+    width: calc( 2 * ((100% - 3 * 60px) / 4) + 60px); }
+  .row .col-3-of-4 {
+    width: calc( 3 * ((100% - 3 * 60px) / 4) + 2 * 60px); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 350px 0;
+  margin-top: -25vh; }
