--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,3 +21,9 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 350px 0 500px 0;
+  margin-top: -120px;
+}
