--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,14 +1,12 @@
 .card {
+  //FUNCTIONALITY
   perspective: 1500px;
   -moz-perspective: 1500px;
   position: relative;
-  height: 500px;
+  height: 520px;
 
   &__side {
-    color: #fff;
-    font-size: 20px;
-
-    height: 500px;
+    height: 520px;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
@@ -17,6 +15,7 @@
     //hide the back part of the element
     backface-visibility: hidden;
     border-radius: 3px;
+    overflow: hidden;
     box-shadow: 0 15px 40px rgba($color-black, 0.15);
 
     &--front {
@@ -38,10 +37,87 @@
 
   //.card:hover .card__side {}
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+  //FRONT SIDE STYLING
+  &__picture {
+    background-size: cover;
+    height: 230px;
+    background-blend-mode: screen;
+    //使之使用所有的浏览器
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    //图下方倾斜
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &--1 {
+      background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url(../img/nat-5.jpg);
+    }
+    &--2 {
+      background-image: url(../img/nat-5.img);
+    }
+    &--3 {
+      background-image: url(../img/nat-5.img);
+    }
+  }
+
+  &__heading {
+    font-size: 28px;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 120px;
+    right: 20px;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 10px 15px;
+    -webkit-box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, 0.85),
+        rgba($color-secondary-dark, 0.85)
+      );
+    }
+  }
+
+  &__details {
+    padding: 30px;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+
+      li {
+        text-align: center;
+        font-size: 15px;
+        padding: 10px;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
+      }
+    }
+  }
+
+  //BACK SIDE STYLING
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
